<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityCalcularPrecio">

    <TextView
        android:id="@+id/textViewResumen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listo"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textViewUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/textViewResumen1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resumen"
        android:textSize="25sp"/>

</LinearLayout>